# Data-Engineering-Roadmap

./: README.md
real-time-data-mds/: README.md  main.py  pyproject.toml
real-time-data-mds/ifra/: docker-compose.yml
real-time-data-mds/ifra/producer/: producer.py  requirements.txt
real-time-data-project/: pyproject.toml
