[project]
name = "real-time-data-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.38",
    "dbt-core>=1.8.7",
    "dbt-snowflake>=1.8.4",
    "finnhub-python>=2.4.26",
    "kafka-python>=2.3.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
    "snowflake-connector-python>=3.14.0",
]
